# Haiku-CMake

./: README.md  ReadMe.md  UseHaiku.cmake
examples/HelloHaiku/: CMakeLists.txt
examples/HelloHaiku/Source/: HelloHaiku.cpp  HelloHaiku.rdef
examples/HelloHaikuI18n/: CMakeLists.txt
examples/HelloHaikuI18n/Source/: HelloHaikuI18n.cpp  HelloHaikuI18n.rdef
examples/HelloHaikuI18n/locales/HelloHaikuI18n/: en.catkeys  fr.catkeys
